--- a/CoopGame/Config/DefaultEngine.ini
+++ b/CoopGame/Config/DefaultEngine.ini
@@ -11,3 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/CoopGame")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="CoopGameGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+GameDefaultMap=/Game/Maps/TestingMap.TestingMap
+EditorStartupMap=/Game/Maps/TestingMap.TestingMap
+
