--- a/CoopGame/.vscode/launch.json
+++ b/CoopGame/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"name": "CoopGame (Debug)",
 			"request": "launch",
 			"preLaunchTask": "CoopGame Win64 Debug Build",
-			"program": "C:\\Users\\smokums\\UnrealTutorials\\CoopGame\\Binaries\\Win64\\UE4-Win64-Debug.exe",
+			"program": "C:\\Users\\logan\\UnrealTutorials\\CoopGame\\Binaries\\Win64\\UE4-Win64-Debug.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -18,7 +18,7 @@
 			"name": "CoopGame (DebugGame)",
 			"request": "launch",
 			"preLaunchTask": "CoopGame Win64 DebugGame Build",
-			"program": "C:\\Users\\smokums\\UnrealTutorials\\CoopGame\\Binaries\\Win64\\UE4-Win64-DebugGame.exe",
+			"program": "C:\\Users\\logan\\UnrealTutorials\\CoopGame\\Binaries\\Win64\\UE4-Win64-DebugGame.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -31,7 +31,7 @@
 			"name": "CoopGame (Development)",
 			"request": "launch",
 			"preLaunchTask": "CoopGame Win64 Development Build",
-			"program": "C:\\Users\\smokums\\UnrealTutorials\\CoopGame\\Binaries\\Win64\\UE4.exe",
+			"program": "C:\\Users\\logan\\UnrealTutorials\\CoopGame\\Binaries\\Win64\\UE4.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -44,7 +44,7 @@
 			"name": "CoopGame (Shipping)",
 			"request": "launch",
 			"preLaunchTask": "CoopGame Win64 Shipping Build",
-			"program": "C:\\Users\\smokums\\UnrealTutorials\\CoopGame\\Binaries\\Win64\\UE4-Win64-Shipping.exe",
+			"program": "C:\\Users\\logan\\UnrealTutorials\\CoopGame\\Binaries\\Win64\\UE4-Win64-Shipping.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -57,7 +57,7 @@
 			"name": "CoopGame (Test)",
 			"request": "launch",
 			"preLaunchTask": "CoopGame Win64 Test Build",
-			"program": "C:\\Users\\smokums\\UnrealTutorials\\CoopGame\\Binaries\\Win64\\UE4-Win64-Test.exe",
+			"program": "C:\\Users\\logan\\UnrealTutorials\\CoopGame\\Binaries\\Win64\\UE4-Win64-Test.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -72,7 +72,7 @@
 			"preLaunchTask": "CoopGameEditor Win64 Debug Build",
 			"program": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor-Win64-Debug.exe",
 			"args": [
-				"C:\\Users\\smokums\\UnrealTutorials\\CoopGame\\CoopGame.uproject"
+				"C:\\Users\\logan\\UnrealTutorials\\CoopGame\\CoopGame.uproject"
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
 			"stopAtEntry": false,
@@ -86,7 +86,7 @@
 			"preLaunchTask": "CoopGameEditor Win64 DebugGame Build",
 			"program": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor-Win64-DebugGame.exe",
 			"args": [
-				"C:\\Users\\smokums\\UnrealTutorials\\CoopGame\\CoopGame.uproject"
+				"C:\\Users\\logan\\UnrealTutorials\\CoopGame\\CoopGame.uproject"
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
 			"stopAtEntry": false,
@@ -100,7 +100,7 @@
 			"preLaunchTask": "CoopGameEditor Win64 Development Build",
 			"program": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor.exe",
 			"args": [
-				"C:\\Users\\smokums\\UnrealTutorials\\CoopGame\\CoopGame.uproject"
+				"C:\\Users\\logan\\UnrealTutorials\\CoopGame\\CoopGame.uproject"
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
 			"stopAtEntry": false,
@@ -117,7 +117,7 @@
 			"args": [
 				"-projectfiles",
 				"-vscode",
-				"-project=\"C:\\Users\\smokums\\UnrealTutorials\\CoopGame\\CoopGame.uproject\"",
+				"-project=\"C:\\Users\\logan\\UnrealTutorials\\CoopGame\\CoopGame.uproject\"",
 				"-game",
 				"-engine"
 			],
